# dedicated-server-availability-watcher

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs  notifiers.rs  providers.rs  storage.rs
src/notifiers/: email.rs  ifttt.rs  ifttt_webhook.rs  simple.rs
src/providers/: online.rs  ovh.rs  scaleway.rs
