[package]
name = "dedicated-server-availability-watcher"
description = "Check and notify about dedicated servers availability"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "cargo"] }
colored = "2.0"
http = "0.2"
# TODO: when hyper reaches 1.0, try to replace requests and see how it goes and what size we get (remove h2 too maybe ?)
reqwest = { version = "0.11", features = ["blocking", "json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = "1.2"

[profile.release]
opt-level = "z"
lto = true

# remember to comment before running `cargo bloat --release`
strip = "symbols"

[features]
# default features, add names here to build them by default
default = []

# add features to "experimental" so they can be compiles in
# if someone wants to test them before they are either kept or trashed
experimental = ["check_interval"]
# experimental features
check_interval = []

# add featurs to "deprecated" so they can be compiles back in
# if someone wants them before code is purged
deprecated = []
# add deprecated features here
