[package]
name = "dedicated-server-availability-watcher"
description = "Check and notify about dedicated servers availability"
version = "0.9.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
array_tool = "1.0"
clap = { version = "4.0", features = ["derive", "cargo"] }
colored = "2.0"
http = "0.2"
# TODO: when hyper reaches 1.0, try to replace requests and see how it goes and what size we get (remove h2 too maybe ?)
# TODO: try with async reqwests ?
reqwest = { version = "0.11", features = ["blocking", "json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
uuid = "1.2"

[profile.release]
opt-level = "z"
lto = true

# remember to comment before running `cargo bloat --release`
strip = "symbols"

[features]
# default features, add names here to build them by default
default = ["experimental", "notifiers", "providers"]

# providers features
providers = ["ovh", "online", "scaleway"]
online = []
ovh = []
scaleway = []

# notifier features
notifiers = ["simple", "ifttt-webhook"]
simple = ["simple-get", "simple-post", "simple-put"]
simple-get = []
simple-post = []
simple-put = []
ifttt-webhook = ["ifttt-webhook-json", "ifttt-webhook-values"]
ifttt-webhook-json = []
ifttt-webhook-values = []

# add features to "experimental" as desired
experimental = []

# add featurs to "deprecated" so they are compiled back in
deprecated = []
