[package]
name = "dedicated-server-availability-watcher"
description = "Check and notify about dedicated servers availability"
version = "0.11.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
array_tool = "1.0"
clap = { version = "4.0", features = ["derive", "cargo"] }
colored = "3.0"
http = "1.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
uuid = "1.2"
lettre = { version = "0.11", optional = true, features = ["default", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true

# remember to comment before running `cargo bloat --release`
strip = "symbols"

[features]
# default features, add names here to build them by default
default = ["experimental", "notifiers", "providers"]

# providers features
providers = ["ovh", "online", "scaleway"]
online = []
ovh = []
scaleway = []

# notifier features
notifiers = ["simple", "ifttt-webhook"]
simple = ["simple-get", "simple-post", "simple-put"]
simple-get = []
simple-post = []
simple-put = []
ifttt-webhook = ["ifttt-webhook-json", "ifttt-webhook-values"]
ifttt-webhook-json = []
ifttt-webhook-values = []
email = ["dep:lettre", "email-sendmail", "email-smtp"]
email-smtp = []
email-sendmail = ["lettre?/sendmail-transport"]

# add features to "experimental" as desired
experimental = ["email"]

# add featurs to "deprecated" so they are compiled back in
deprecated = []
